--- a/Short books!.html
+++ b/Short books!.html
@@ -2,14 +2,14 @@
 <html lang = "en">
     <head>
         <meta charset="utf-8" content="utf-8">
-        <meta name="author" content="creator">
+        <meta name="author" content="neverfriendme">
         <meta name="viewport" content="width=device-width">
         <title>Short books!</title>
         </head>
         <title>Short books!</title>
         <body>
             <h1>Short books!</h1>
-            <p>A webpage by creator</p>
+            <p style="color: red;">A webpage by Me</p>
             <p>what is Short books!,Short books! is repostory that you can keep save,write and read books that you made or others made</p>
 
             <button  style="background-color: yellow;color:rgb(1,2,3);border-radius: 10px;">Click here to  illistarate a book</button>
@@ -22,6 +22,6 @@
                     </div>
 <script>
 </script>              
-<div class = "footer">The creator of this webpage forbids anyone to copy the code and release it as their own</div>
+<div class = "footer">Please do not copy Short books!</div>
 </body>
 </html>
