--- a/Page.html
+++ b/Page.html
@@ -4,10 +4,11 @@
         <meta charset="utf-8" content="utf-8">
         <meta name="author" content="neverfriendme">
         <meta name="viewport" content="width=device-width"
-        <title style="color: red;">Write Your Book!</title>
+        <title>Write Your Book!</title>
     </head>
     <p>What will your book be about?The name?Who is the main character? Where are they?That's for you to answer!</p>
     <body>
+        <title>Write Your Book</title>
  <script>
 
  </script>
