--- a/Html webpages/Page.html
+++ b/Html webpages/Page.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang = "en">
+    <head>
+        <meta charset="utf-8" content="utf-8">
+        <meta name="author" content="neverfriendme">
+        <meta name="viewport" content="width=device-width"
+        <title>Write Your Book!</title>
+    </head>
+    <p>What will your book be about?The name?Who is the main character? Where are they?That's for you to answer!</p>
+    <body>
+        <title>Write Your Book</title>
+ <script>
 
+ </script>
+</body>
+</html>
