--- a/Html webpages/Page.html
+++ b/Html webpages/Page.html
@@ -8,7 +8,8 @@
     </head>
     <p>What will your book be about?The name?Who is the main character? Where are they?That's for you to answer!</p>
     <body>
-        <title>Write Your Book</title>
+        <title>Write Your Book!</title>
+<var> <input type="title"> </var>
  <script>
 
  </script>
