--- a/Short books!.html
+++ b/Short books!.html
@@ -22,6 +22,6 @@
                     </div>
 <script>
 </script>              
-<div class = "footer">Please do not copy Short books!</div>
+<div style="color:purple;" class = "footer">Please do not copy Short books!</div>
 </body>
 </html>
