--- a/Html webpages/Page.html
+++ b/Html webpages/Page.html
@@ -4,14 +4,21 @@
         <meta charset="utf-8" content="utf-8">
         <meta name="author" content="neverfriendme">
         <meta name="viewport" content="width=device-width"
-        <title>Write Your Book!</title>
+        <title >Write Your Book</title>
     </head>
+    <div class ="Name">
+ Name =<input style="width: 6opx;padding-right: 30%;"  size="60px" type="title">
+        </div>
     <p>What will your book be about?The name?Who is the main character? Where are they?That's for you to answer!</p>
     <body>
         <title>Write Your Book!</title>
-<var> <input type="title"> </var>
+        <div class="idea">
+idea = <input style="height: 500px;" size="200px;" type="body">
+            </div>
+            <div class="closing">
+closing=<input style="padding-left: 80%;">
+                </div>
  <script>
-
  </script>
 </body>
 </html>
