--- a/Html webpages/Page.html
+++ b/Html webpages/Page.html
@@ -9,7 +9,7 @@
     <div class ="Name">
  Name =<input style="width: 6opx;padding-right: 30%;"  size="60px" type="title">
         </div>
-    <p>What will your book be about?The name?Who is the main character? Where are they?That's for you to answer!</p>
+    <p>What will your book be about?The name?Who is the main character(s)? Where are they?That's for you to answer!</p>
     <body>
         <title>Write Your Book!</title>
         <div class="idea">
