--- a/Html webpages/Page.html
+++ b/Html webpages/Page.html
@@ -18,7 +18,17 @@ idea = <input style="height: 500px;" size="200px;" type="body">
             <div class="closing">
 closing=<input style="padding-left: 80%;">
                 </div>
+
+                <button  onclick="save()"  style="background-color: yellow;color: rgb(249,93,3);border-radius: 10px;">Save</button>
+                <a href="Readbooks!.html">
+                <button>Share</button>
+                </a>
  <script>
+     save();{
+        document(Name)
+        document(idea)
+        document(closing)
+    }
  </script>
 </body>
 </html>
