--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!Doctype html>
 <html lang = "en">
     <head>
+        <style>
+            .Title{
+                position:static;
+                font-size: 70px;
+            }
+
+        </style>
         <meta charset="utf-8" content="utf-8">
         <meta name="author" content="neverfriendme">
         <meta name="viewport" content="width=device-width">
         <title>Short books!</title>
         </head>
-        <title>Short books!</title>
-        <body>
-            <h1>Short books!</h1>
-            <p style="color: red;">A webpage by Me</p>
-            <p>what is Short books!,Short books! is repostory that you can keep save,write and read books that you made or others made</p>
-            <a href="Html webpages/Page.html>
-            <button  style="background-color: yellow;color:rgb(249,93,3);border-radius: 10px;">Click here to  illistarate a book</button>
+        <body style="background-color: rgb(11,39 ,141 );">
+            <h1 class="Title" style="color: yellow;">Short books!</h1>
+            <p style="color: yellow;">A webpage by neverfriendme</p>
+            <p style="color:yellow">what is Short books? Short books is repostory that you can keep write and read books that you made or others made! It is a new page and is still in development so there isn't that much
+            </p>
+            <a href="Html webpages/Page.html">
+            <button style="background-color: yellow;color:black;border-radius: 10px;">Click here to illistarate a book!</button>
+            </a>
+            <a href="Html webpages/Readbooks!.html">
+                <buttom style="background-color: yellow;color: black;border-radius: 10px;">Click here to read books!</buttom>
             </a>
 
-            <div class = "text">
-                   <h1>More</h1>
-                    <p>Short books! is a webpage I have been working very hard on I hope you apprieciate it.</p>
-                    <p>This v0.1 indev</p>
-                    </div>
 <script>
 </script>              
-<div style="color:purple;" class = "footer">Please do not copy Short books!</div>
 </body>
 </html>
