--- a/Html webpages/Page.html
+++ b/Html webpages/Page.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
-<html lang = "en">
-    <head>
-        <meta charset="utf-8" content="utf-8">
-        <meta name="author" content="neverfriendme">
-        <meta name="viewport" content="width=device-width"
-        <title >Write Your Book</title>
-    </head>
-    <div class ="Name">
- Name =<input style="width: 6opx;padding-right: 30%;"  size="60px" type="title">
-        </div>
-    <p>What will your book be about?The name?Who is the main character(s)? Where are they?That's for you to answer!</p>
-    <body>
-        <title>Write Your Book!</title>
-        <div class="idea">
-idea = <input style="height: 500px;" size="200px;" type="body">
-            </div>
-            <div class="closing">
-closing=<input style="padding-left: 80%;">
-                </div>
-
-                <button  onclick="save()"  style="background-color: yellow;color: rgb(249,93,3);border-radius: 10px;">Save</button>
-                <a href="Readbooks!.html">
-                <button>Share</button>
-                </a>
- <script>
-     save();{
-        document(Name)
-        document(idea)
-        document(closing)
-    }
- </script>
+<html lang="en">
+<head>
+    <style>
+        .Title{
+            position: static;
+            font-size: 70px;
+        }
+    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Illistarate</title>
+</head>
+<body style="background-color: rgb(11,39 ,141 );">
+    <h1 class="Title" style="color: yellow;">Illistarate a book!</h1>
+    <p style="color: yellow;">Requirements:
+        1.Must be a .txt
+        2.Must have less than 200 words
+        3. Must be appropriate
+        After all these steps you must upload it <a style="color: yellow;" href="https://www.cognitoforms.com/Person32/BookIllistration">here</a>
+        It will take a while for your book to be on the site.
+    </p>
+    <a href="../index.html">
+        <button style="background-color: yellow;color: black;border-radius: 10px;">Back</button>
+    </a>
 </body>
 </html>
