--- a/Html webpages/Readbooks!.html
+++ b/Html webpages/Readbooks!.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <style>
+        .Title{
+            position: static;
+            font-size: 70px;
+        }
+        div.Shelf{
+            position: static;
+            border: 0px;
+        }
+    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Library</title>
+</head>
+<body style="background-color: rgb(11,39 ,141 );">
+    <h1 class="Title" style="color: yellow;">Library</h1>
+    <p style="color: yellow;">Welcome to the library! Here you can read books others made! You can read books of your interest and enjoy what you are reading!</p>
+    <a href="../index.html">
+        <button style="background-color: yellow;color: black;border-radius: 10px;">Back</button>
+    </a>
+    <div class="Shelf" draggable="true"></div>
+    <style>
+        .Shelf{
+            width: 900px;
+            height:500px;
+            background-color: aliceblue;
+        }
+    </style>
+</body>
+</html>
 
