--- a/Html webpages/Readbooks!.html
+++ b/Html webpages/Readbooks!.html
@@ -21,12 +21,12 @@
     <a href="../index.html">
         <button style="background-color: yellow;color: black;border-radius: 10px;">Back</button>
     </a>
-    <div class="Shelf" draggable="true"></div>
+        <div class="Shelf" draggable="true"><a style="color: yellow;" href="../Books/The Importance of Knowing What Came Before.html">The Importance of Knowing What Came Before</a></div>
     <style>
-        .Shelf{
+            .Shelf{
             width: 900px;
             height:500px;
-            background-color: aliceblue;
+            background-color: brown;
         }
     </style>
 </body>
