Update The Importance of Knowing What Came Before.html

--- a/Books/The Importance of Knowing What Came Before.html
+++ b/Books/The Importance of Knowing What Came Before.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Book Number 1</title>
+</head>
+<body style="background-color: rgb(11,39 ,141 );">
+    <h1 style="color: yellow;">Author</h1>
+    <p style="color: yellow;">neverfriendme the best</p>
+    <h2 class="Book name" style = "color: yellow;">The Importance of Knowing what came Before</h2>
+    <p style="color: yellow;">It is important to know about History. Why? Because it helps us avoid repeating the same mistakes. If we never recorded anything, we would keep making those mistakes over and over again.</p>
+    <p style="color: yellow;">We would also miss out on fascinating aspects of the past. I don't know about you, but when I play games from earlier eras, I often think to myself, "Oh, wow! I am playing a game from the past!"</p>
+    <p style="color: yellow;">This also highlights the differences between the present and the past. Sometimes, I wonder what the year 3000 will be like. Will it be futuristic? Will it be significantly different? What countries will exist? Will ther be more animals, or will they be extinct? Will they bring animals from the past?</p>
+    <p style="color: yellow;">You might be wondering about that last question-or maybe not. If you have been following the news or watching Youtube, you may know that the dire wolf has been brought back, sort of. But I won't get into that.</p>
+    <p style="color: yellow;">Since this is Short-books, I will end it here.</p>
+    <a href="../Books/The Importance of Knowing What Came Before .txt" style="color: yellow;">Download</a>
+</body>
+</html>
